scenarios/02-traffic-routing/network/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: reviews
  namespace: 02-traffic-routing
spec:
  host: reviews
  subsets:
  - name: v1
    labels: 
      version: v1
  - name: v2
    labels: 
      version: v2
  - name: v3
    labels: 
      version: v3
