scenarios/02-traffic-routing/network/vs-route-by-header.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews-route-by-header
  namespace: 02-traffic-routing
spec: 
  hosts: 
  - reviews 
  http: 
  - match:
    - headers: 
        x-env: 
          exact: test
    route: 
    - destination: 
      host: reviews
      subset: v2
  - route: 
    - destination: 
        host: reviews 
        subset: v1
