scenarios/02-traffic-routing/network/vs-route-by-uri.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews-route-by-uri
  namespace: 02-traffic-routing
spec: 
  hosts: 
  - reviews 
  http:
  - match: 
    - uri: 
        prefix: /reviews/special
    route: 
    - destination:
        host: reviews 
        subset: v2
  - route: 
    - destination: 
        host: reviews
        subset: v1
